--- a/src/todo.html
+++ b/src/todo.html
@@ -1,59 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
+@@include('./partials/header.html')
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Graduation Tracker</title>
-    <link rel="stylesheet" href="styles/styles.css">
-</head>
+<main class="body">
+    <header class="page-header">
+        <h1 class="page-title">To Do</h1>
+        <hr>
+    </header>
+</main>
 
-<body>
-
-    <div class="wrapper">
-
-        <nav class="main-nav">
-
-            <a href="index.html" class="nav-item">
-                <span class="nav__icon nav__icon--profile"></span>
-                <span class="nav__text">Profile</span>
-            </a>
-
-            <a href="classes.html" class="nav-item">
-                <span class="nav__icon nav__icon--class"></span>
-                <span class="nav__text">Classes</span>
-            </a>
-
-            <a href="todo.html" class="nav-item nav-item--active">
-                <span class="nav__icon nav__icon--todo"></span>
-                <span class="nav__text">To Do</span>
-            </a>
-
-            <a href="tracker.html" class="nav-item">
-                <span class="nav__icon nav__icon--tracker"></span>
-                <span class="nav__text">Tracker</span>
-            </a>
-
-            <a href="inbox.html" class="nav-item">
-                <span class="nav__icon nav__icon--inbox"></span>
-                <span class="nav__text">Inbox</span>
-            </a>
-
-        </nav>
-
-        <main class="body">
-            <header class="page-header">
-                <h1 class="page-title">To Do</h1>
-                <hr>
-            </header>
-
-
-        </main>
-
-    </div>
-
-    <script src="scripts/main.js"></script>
-</body>
-
-</html>
+@@include('./partials/footer.html')
