--- a/src/classes.html
+++ b/src/classes.html
@@ -4,36 +4,36 @@
 
     <header class="page-header">
         <h1 class="page-title">Classes</h1>
-        <h2 class="page-subtitle">To Do</h2>
+
         <hr>
     </header>
 
     <div class="classes-details">
 
         <div class="classes-detail classes-detail__box1">
-            <img class="classes-detail__img">
-            <h2 class="classes-detail__title">Introductory Biology Lab</h2>
+            <img class="classes-detail__img" src="images/cover_ Peach-01.jpg" height= 110px width= 280px>
+            <a class="classes-detail__title">Introductory Biology Lab</a>
             <h2 class="classes-detail__subtitle">BIO-1041-OL</h2>
             <p class="classes-detail__info">2017-2018 - Summer Semester</p>
         </div>
 
         <div class="classes-detail classes-detail__box2">
-            <img class="classes-detail__img">
-            <h2 class="classes-detail__title">Introductory Biology</h2>
+            <img class="classes-detail__img" src="images/cover_Pink-01.jpg" height= 110px width= 280px>
+            <a class="classes-detail__title">Introductory Biology</a>
             <h2 class="classes-detail__subtitle">BIO-1043-OL</h2>
             <p class="classes-detail__info">2017-2018 - Summer Semester</p>
         </div>
 
         <div class="classes-detail classes-detail__box3">
-            <img class="classes-detail__img">
-            <h2 class="classes-detail__title">Public Speaking</h2>
+            <img class="classes-detail__img" src="images/cover_Teal-01.jpg" height= 110px width= 280px>
+            <a class="classes-detail__title">Public Speaking</a>
             <h2 class="classes-detail__subtitle">COM-1113-OL</h2>
             <p class="classes-detail__info">2017-2018 - Summer Semester</p>
         </div>
 
         <div class="classes-detail classes-detail__box4">
-            <img class="classes-detail__img">
-            <h2 class="classes-detail__title">Freedom in American Society</h2>
+            <img class="classes-detail__img" src="images/cover_Blue-01.jpg" height= 110px width= 280px>
+            <a class="classes-detail__title">Freedom in American Society</a>
             <h2 class="classes-detail__subtitle">PLS-3003-OL</h2>
             <p class="classes-detail__info">2017-2018 - Summer Semester</p>
         </div>
@@ -41,6 +41,8 @@
     </div>
 
     <div class="todo-details">
+
+        <h2 class="page-subtitle">To Do</h2>
 
         <div class="todo-detail todo__current">
             <a href="#" class="todo-detail__title">Turn in Faith Talk #2</a>
@@ -71,6 +73,46 @@
         <a href="#" class="todo-detail todo__btn">
             <em>View More...</em>
         </a>
+
+        <h2 class="page-subtitle">Coming Up</h2>
+
+        <div class="todo-detail todo__current">
+            <a href="#" class="todo-detail__title">Turn in Faith Talk #2</a>
+            <p class="todo-detail__info">Public Speaking</p>
+            <p class="todo-detail__info">May 17 at 12:00pm</p>
+        </div>
+        <div class="todo-detail todo__current">
+            <a href="#" class="todo-detail__title">Take 2.15 Quiz #2</a>
+            <p class="todo-detail__info">Freedom in American Society</p>
+            <p class="todo-detail__info">May 20 at 11:59pm</p>
+        </div>
+        <div class="todo-detail todo__current">
+            <a href="#" class="todo-detail__title">Take Topic Selection</a>
+            <p class="todo-detail__info">Public Speaking</p>
+            <p class="todo-detail__info">May 20 at 11:59pm</p>
+        </div>
+        <div class="todo-detail todo__current">
+            <a href="#" class="todo-detail__title">Take Exam #2</a>
+            <p class="todo-detail__info">Freedom in American Society</p>
+            <p class="todo-detail__info">May 20 at 11:59pm</p>
+        </div>
+        <div class="todo-detail todo__future">
+            <a href="#" class="todo-detail__title">Take Informative Speaking Quiz</a>
+            <p class="todo-detail__info">Public Speaking</p>
+            <p class="todo-detail__info">May 20 at 11:59pm</p>
+        </div>
+
+        <a href="#" class="todo-detail todo__btn">
+            <em>View More...</em>
+        </a>
+
+        <h2 class="page-subtitle">Recent Feedback</h2>
+
+        <div class="todo-detail todo__future">
+            <a href="#" class="todo-detail__title">Take Informative Speaking Quiz</a>
+            <p class="todo-detail__info">Public Speaking</p>
+            <p class="todo-detail__info">May 20 at 11:59pm</p>
+        </div>
 
     </div>
 
