--- a/src/classes.html
+++ b/src/classes.html
@@ -11,38 +11,42 @@
     <div class="classes-details">
 
         <div class="classes-detail classes-detail__box1">
-            <img class="classes-detail__img" src="images/cover_ Peach-01.jpg" height= 110px width= 280px>
+            <div class="rectangle rectangle--lightorange"></div>
             <a class="classes-detail__title">Introductory Biology Lab</a>
             <h2 class="classes-detail__subtitle">BIO-1041-OL</h2>
             <p class="classes-detail__info">2017-2018 - Summer Semester</p>
+            <img class="Classes-detail__icon" src="images/icon_Notification.png" height=1 0px>
         </div>
 
         <div class="classes-detail classes-detail__box2">
-            <img class="classes-detail__img" src="images/cover_Pink-01.jpg" height= 110px width= 280px>
+            <div class="rectangle rectangle--purple"></div>
             <a class="classes-detail__title">Introductory Biology</a>
             <h2 class="classes-detail__subtitle">BIO-1043-OL</h2>
             <p class="classes-detail__info">2017-2018 - Summer Semester</p>
+            <img class="Classes-detail__icon" src="images/icon_Notification.png" height=1 0px>
         </div>
 
         <div class="classes-detail classes-detail__box3">
-            <img class="classes-detail__img" src="images/cover_Teal-01.jpg" height= 110px width= 280px>
+            <div class="rectangle rectangle--pink"></div>
             <a class="classes-detail__title">Public Speaking</a>
             <h2 class="classes-detail__subtitle">COM-1113-OL</h2>
             <p class="classes-detail__info">2017-2018 - Summer Semester</p>
+            <img class="Classes-detail__icon" src="images/icon_Notification.png" height=1 0px>
         </div>
 
         <div class="classes-detail classes-detail__box4">
-            <img class="classes-detail__img" src="images/cover_Blue-01.jpg" height= 110px width= 280px>
+            <div class="rectangle rectangle--darkorange"></div>
             <a class="classes-detail__title">Freedom in American Society</a>
             <h2 class="classes-detail__subtitle">PLS-3003-OL</h2>
             <p class="classes-detail__info">2017-2018 - Summer Semester</p>
+            <img class="Classes-detail__icon" src="images/icon_Notification.png" height=1 0px>
         </div>
 
     </div>
 
     <div class="todo-details">
 
-        <h2 class="page-subtitle">To Do</h2>
+        <h2 class="page-subtitle">Assignments</h2>
 
         <div class="todo-detail todo__current">
             <a href="#" class="todo-detail__title">Turn in Faith Talk #2</a>
@@ -70,7 +74,7 @@
             <p class="todo-detail__info">May 20 at 11:59pm</p>
         </div>
 
-        <a href="#" class="todo-detail todo__btn">
+        <a href="#" class="todo-detail todo-detail__title">
             <em>View More...</em>
         </a>
 
@@ -102,7 +106,7 @@
             <p class="todo-detail__info">May 20 at 11:59pm</p>
         </div>
 
-        <a href="#" class="todo-detail todo__btn">
+        <a href="#" class="todo-detail todo-detail__title">
             <em>View More...</em>
         </a>
 
