--- a/src/todo.html
+++ b/src/todo.html
@@ -5,6 +5,135 @@
         <h1 class="page-title">To Do</h1>
         <hr>
     </header>
+
+    <div class="todo__container">
+
+        <div class="todo-toggle">
+
+            <div class="todo-toggle todo-toggle__list1">
+                <input type="radio" checked="checked" name="radioBtn">
+                <li class="toggle__item">Present</li>
+                <input type="radio" name="radioBtn">
+                <li class="toggle__item">Future</li>
+                <input type="radio" name="radioBtn">
+                <li class="toggle__item">Past</li>
+            </div>
+            <div class="todo-toggle todo-toggle__list2">
+                <input type="checkbox">
+                <li class="toggle__item">Assignments</li>
+                <input type="checkbox">
+                <li class="toggle__item">Quizzes</li>
+                <input type="checkbox">
+                <li class="toggle__item">Exams</li>
+            </div>
+            <div class="todo-toggle todo-toggle__list3">
+                <input type="checkbox">
+                <li class="toggle__item">Graded</li>
+                <input type="checkbox">
+                <li class="toggle__item">Not Graded</li>
+                <input type="checkbox">
+                <li class="toggle__item">Recent Feedback</li>
+            </div>
+
+        </div>
+
+        <h2 class="result result__title1">Present</h2>
+
+        <div class="result__details">
+            <div class="result__present">
+
+                <a href="#" class="todo-detail__title">Turn in 6.7 Assignment | Law</a>
+                <p class="todo-detail__info">Freedom in American Society</p>
+                <p class="todo-detail__info">June 17 at 11:59pm</p>
+
+                <a href="#" class="todo-detail__title">Turn in Persuasive Claims</a>
+                <p class="todo-detail__info">Public Speaking</p>
+                <p class="todo-detail__info">June 17 at 11:59pm</p>
+
+                <a href="#" class="todo-detail__title">Take 6.9 Quiz 6</a>
+                <p class="todo-detail__info">Freedom in American Society</p>
+                <p class="todo-detail__info">June 17 at 11:59pm</p>
+
+                <a href="#" class="todo-detail__title">Turn in Eliminating Clutter</a>
+                <p class="todo-detail__info">Public Speaking</p>
+                <p class="todo-detail__info">June 17 at 11:59pm</p>
+            </div>
+        </div>
+
+        <h2 class="result result__title2">Future</h2>
+
+        <div class="result__details">
+            <div class="result__future">
+
+                <a href="#" class="todo-detail__title">Turn in 6.7 Assignment | Law</a>
+                <p class="todo-detail__info">Freedom in American Society</p>
+                <p class="todo-detail__info">June 17 at 11:59pm</p>
+
+                <a href="#" class="todo-detail__title">Turn in Persuasive Claims</a>
+                <p class="todo-detail__info">Public Speaking</p>
+                <p class="todo-detail__info">June 17 at 11:59pm</p>
+
+                <a href="#" class="todo-detail__title">Take 6.9 Quiz 6</a>
+                <p class="todo-detail__info">Freedom in American Society</p>
+                <p class="todo-detail__info">June 17 at 11:59pm</p>
+
+                <a href="#" class="todo-detail__title">Turn in Eliminating Clutter</a>
+                <p class="todo-detail__info">Public Speaking</p>
+                <p class="todo-detail__info">June 17 at 11:59pm</p>
+
+                <a href="#" class="todo-detail__title">Turn in Eliminating Clutter</a>
+                <p class="todo-detail__info">Public Speaking</p>
+                <p class="todo-detail__info">June 17 at 11:59pm</p>
+
+                <a href="#" class="todo-detail__title">Turn in Eliminating Clutter</a>
+                <p class="todo-detail__info">Public Speaking</p>
+                <p class="todo-detail__info">June 17 at 11:59pm</p>
+
+            </div>
+        </div>
+
+        <h2 class="result result__title3">Past</h2>
+
+        <div class="result__details">
+            <div class="result__past">
+
+                <a href="#" class="todo-detail__title">Turn in 6.7 Assignment | Law</a>
+                <p class="todo-detail__info">Freedom in American Society</p>
+                <p class="todo-detail__info">June 17 at 11:59pm</p>
+
+                <a href="#" class="todo-detail__title">Turn in Persuasive Claims</a>
+                <p class="todo-detail__info">Public Speaking</p>
+                <p class="todo-detail__info">June 17 at 11:59pm</p>
+
+                <a href="#" class="todo-detail__title">Take 6.9 Quiz 6</a>
+                <p class="todo-detail__info">Freedom in American Society</p>
+                <p class="todo-detail__info">June 17 at 11:59pm</p>
+
+                <a href="#" class="todo-detail__title">Turn in Eliminating Clutter</a>
+                <p class="todo-detail__info">Public Speaking</p>
+                <p class="todo-detail__info">June 17 at 11:59pm</p>
+
+                <a href="#" class="todo-detail__title">Turn in Eliminating Clutter</a>
+                <p class="todo-detail__info">Public Speaking</p>
+                <p class="todo-detail__info">June 17 at 11:59pm</p>
+
+                <a href="#" class="todo-detail__title">Turn in Eliminating Clutter</a>
+                <p class="todo-detail__info">Public Speaking</p>
+                <p class="todo-detail__info">June 17 at 11:59pm</p>
+
+                <a href="#" class="todo-detail__title">Turn in Eliminating Clutter</a>
+                <p class="todo-detail__info">Public Speaking</p>
+                <p class="todo-detail__info">June 17 at 11:59pm</p>
+
+                <a href="#" class="todo-detail__title">Turn in Eliminating Clutter</a>
+                <p class="todo-detail__info">Public Speaking</p>
+                <p class="todo-detail__info">June 17 at 11:59pm</p>
+
+            </div>
+        </div>
+
+    </div>
+
 </main>
 
 @@include('./partials/footer.html')
