Fixed positioning of classes, to do, and tracker page

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
                 <div class="actions">
                     <a href="#" class="btn">Edit Profile</a>
                 </div><!-- /actions -->
-            </div><!-- /profile-info -->
+            </div><!-- /profile -->
 
         </div><!-- /page__desc -->
 
@@ -52,6 +52,7 @@
                 </article>
 
             </section><!-- /profile-details -->
+
         </div><!-- /page__details -->
 
     </div><!-- /page__body -->
